rs/macros/tests/ui/gprogram_fails_for_service_multiple_groute_attributes_are_not_allowed.rs
use sails_macros::program;

struct MyService;

struct MyProgram;

#[program]
impl MyProgram {
    #[route("svc1")]
    #[route("svc2")]
    pub fn service1(&self) -> MyService {
        MyService
    }
}

#[tokio::main]
async fn main() {}
